# nostos

./: .gitattributes  .gitignore  .nostos_history  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  PROJECT.md  README.md  bench_closure_only.nos  bench_gc_heavy.nos  bench_gc_light.nos  bench_list_only.nos  bench_map_only.nos  lang-doc.md  lang-spec.md  nostlets-registry.json  nostos-concurrency.md  nostos_crystal_example  repl-callgraph.md  repro_overload.nos  test_gc_native.nos  test_nalgebra_ops.nos
.cargo/: config.toml
.claude/: ralph-loop.local.md
bench/: Fib.java  array_micro.nos  array_only.nos  array_sum.py  array_sum_jit.nos  array_sum_only.nos  array_sum_single.nos  array_write.nos  array_write.py  array_write.rb  array_write_loop.nos  baseline.md  call_overhead_bench.nos  compare.nos  fib.nos  fib.py  fib.rb  fib_45.nos  gc_stress.nosgc  gc_stress_extreme.nosgc  gc_stress_long.nosgc  http_with_db_bench.md  int_table_bench.nos  list.nos  list_debug.nos  list_iterate.hs  list_iterate.nos  list_iterate.py  list_micro.nos  list_native_full.nos  list_only.nos  list_sum.nos  list_sum.py  list_sum_fold.py  list_sum_fold_nolambda.py  list_sum_native.nos  list_sum_nofold.nos  list_sum_only.nos  list_sum_tco.nos  list_switch_bench.nos  (+12 more)
benchImprovements/: 01_call_overhead.nos  02_fib_recursive.nos  03_fib_tail.nos  04_sum_recursive.nos  05_list_fold.nos  06_list_map.nos  07_list_filter.nos  08_list_build.nos  09_arithmetic_heavy.nos  10_pattern_match.nos  11_record_ops.nos  12_variant_ops.nos  13_closure_create.nos  14_closure_call.nos  15_string_concat.nos  16_tuple_ops.nos  17_guards_heavy.nos  18_nested_calls.nos  19_wide_calls.nos  20_higher_order.nos  21_allocation_stress.nos  22_ackermann.nos  23_list_reverse.nos  24_binary_ops.nos  25_conditionals.nos  26_list_build_large.nos  30_fib_large.nos  31_list_build_huge.nos  32_sum_large.nos  33_arithmetic_stress.nos  ANALYSIS.md  HISTORY.md  run_benchmarks.sh  run_benchmarks_nojit.sh
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: autocomplete.rs  connect.rs  custom_views.rs  debug_panel.rs  editor.rs  git_panel.rs  inspector_panel.rs  main.rs  nostos_panel.rs  packages.rs  repl.rs  repl_panel.rs  server.rs  tui.rs  tutorial.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: compile.rs  lib.rs
crates/compiler/src/compile/: modules.rs  patterns.rs  traits.rs  type_utils.rs
crates/compiler/tests/: compile_check_test.rs  nos_files.rs  type_mismatch_test.rs
crates/extension/: Cargo.toml
crates/extension/src/: lib.rs
crates/jit/: Cargo.toml
crates/jit/src/: lib.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: main.rs  server.rs
crates/lsp/tests/: integration_test.rs
crates/repl/: Cargo.toml
crates/repl/src/: callgraph.rs  engine.rs  inference.rs  lib.rs  repl_tests.rs  session.rs
crates/source/: Cargo.toml
crates/source/src/: definition.rs  git.rs  lib.rs  manager.rs  module.rs  project.rs
crates/tui/: Cargo.toml
crates/tui/src/: main.rs
crates/vm/: Cargo.toml
crates/vm/benches/: vm_vs_runtime.rs
crates/vm/src/: async_vm.rs  cache.rs  extensions.rs  gc.rs  inspect.rs  io_runtime.rs  lib.rs  parallel.rs  process.rs  runtime.rs  scheduler.rs  shared_types.rs  supervisor.rs  value.rs  vm.rs  worker.rs
crates/vm/tests/: cache_tests.rs
crystal_example/: nostos_crystal_example.cr
demo/: input.nos  list.nos  panel.nos
docs/: 2025-04-15-lsp-completion-speedup.md  BYTECODE_CACHING_DESIGN.md  CACHE_ANALYSIS.md  LSP_TESTING.md  PLAN_EMBED_STDLIB.md  ffi.md  improve.md  infer.md  mvars.md  nostos-language-reference.md  probeResults.md  replenv.md  tui.md  type_system_design.md
editors/: nostos.tmLanguage.json
examples/: async_io_demo.nos  builtin_traits.nos  builtin_traits_advanced.nos  calculator.nos  concurrent_timeout.nos  copy_trait.nos  counter_server.nos  cross_thread_chain.nos  database_pool_demo.nos  deriving_advanced.nos  deriving_basics.nos  fibonacci.nos  file_io.nos  hello_io.nos  hello_server.nos  higher_order.nos  http_client.nos  http_cookies.nos  http_error_handling.nos  http_form_handling.nos  http_query_params.nos  http_routing.nos  http_server.nos  http_server_example.nos  http_server_test.nos  http_websocket.nos  inspect_demo.nos  inspector_demo.nos  jit_heartbeat.nos  json_api.nos  json_roundtrip.nos  json_test.nos  json_types.nos  list_ops.nos  map_literals.nos  mass_spawn.nos  option.nos  parallel_io_test.nos  parallel_map.nos  pattern_matching.nos  (+41 more)
extensions/glam/: Cargo.toml  glam.nos
haskell_example/: nostos_haskell_example  nostos_haskell_example.hi  nostos_haskell_example.hs
homebrew-nostos/: README.md
plans/: repl-infrastructure.md  source-management.md  vision.md
scripts/: run-tests.sh  run_examples.sh
site/: index.html
skills/: collections.md  types.md
stdlib/: CORE_MODULES  db.nos  html.nos  html_parser.nos  io.nos  json.nos  list.nos  logging.nos  pool.nos  reactiveWeb.nos  rhtml.nos  rhtml_session.nos  rhttp_server.nos  rweb.nos  rweb_state.nos  server.nos  traits.nos  url.nos  validation.nos  ws.nos
test/: encoding_test.nos  file_io_test.nos  http_verbs_test.nos  io_error_test.nos  timeout_test.nos
test_errors/: arity_mismatch.nos  div_zero.nos  parse_error.nos  private_access.nos  try_catch.nos  try_finally.nos  try_propagate.nos  unclosed_brace.nos  unknown_function.nos  unknown_type.nos  unknown_var.nos
tests/: cons_and_string_patterns.nos  runall.sh  spawn_float64_array.nos  spawn_typed_array.nos  test_edge_cases.nos
tests-selenium/: action_helpers_app.nos  cart_test.nos  counter_test.nos  external_fn_test.nos  forms_test.nos  multi_counter_test.nos  reactive_counter.nos  routes_test.nos  rweb_cart_test.nos  rweb_counter_test.nos  rweb_external_fn_test.nos  rweb_forms_test.nos  rweb_multi_counter_test.nos  rweb_no_components_app.nos  rweb_no_components_test.nos  rweb_routes_test.nos  rweb_todo_test.nos  todo_test.nos
tests-ws/: Cargo.toml
todo/: connection.md  http-server.md  message.md  process_introspection.md  repl_redef.txt  server.md  string_gc.txt  tokio.md  type_inference_bug.md
verify/: verify.sh
(+1760 files in other folders)
