[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Petter"]
license = "MIT"

[workspace.dependencies]
logos = "0.15"
chumsky = "0.9"
ariadne = "0.4"
thiserror = "2"
once_cell = "1.19"
stacker = "0.1"

# BigInt and Decimal support
num-bigint = "0.4"
num-traits = "0.2"
rust_decimal = "1.36"

# Cranelift JIT
cranelift-codegen = "0.116"
cranelift-frontend = "0.116"
cranelift-module = "0.116"
cranelift-jit = "0.116"
cranelift-native = "0.116"
target-lexicon = "0.12"

# Async IO
tokio = { version = "1", features = ["rt-multi-thread", "fs", "io-util", "sync", "time", "net", "macros", "process"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }

# String encoding
encoding_rs = "0.8"
base64 = "0.22"
percent-encoding = "2.3"

# HTTP Server
axum = "0.8"
tower = "0.5"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["server", "tokio"] }

# Time, Random, Regex
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
regex = "1"

# Database
tokio-postgres = "0.7"

# Internal crates
nostos-syntax = { path = "crates/syntax" }
nostos-compiler = { path = "crates/compiler" }
nostos-vm = { path = "crates/vm" }
nostos-types = { path = "crates/types" }
nostos-repl = { path = "crates/repl" }
nostos-cli = { path = "crates/cli" }
nostos-jit = { path = "crates/jit" }