[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Petter"]
license = "MIT"

[workspace.dependencies]
logos = "0.15"
chumsky = "0.9"
ariadne = "0.4"
thiserror = "2"
once_cell = "1.19"
stacker = "0.1"

# BigInt and Decimal support
num-bigint = "0.4"
num-traits = "0.2"
rust_decimal = "1.36"

# Cranelift JIT
cranelift-codegen = "0.116"
cranelift-frontend = "0.116"
cranelift-module = "0.116"
cranelift-jit = "0.116"
cranelift-native = "0.116"
target-lexicon = "0.12"

# Internal crates
nostos-syntax = { path = "crates/syntax" }
nostos-compiler = { path = "crates/compiler" }
nostos-vm = { path = "crates/vm" }
nostos-types = { path = "crates/types" }
nostos-repl = { path = "crates/repl" }
nostos-cli = { path = "crates/cli" }
nostos-jit = { path = "crates/jit" }
