[workspace]
resolver = "2"
members = ["crates/*", "tests-ws"]

[workspace.package]
version = "0.2.11"
edition = "2024"
authors = ["Petter"]
license = "MIT"

[workspace.dependencies]
logos = "0.15"
chumsky = "0.9"
ariadne = "0.4"
thiserror = "2"
once_cell = "1.19"
stacker = "0.1"

# BigInt and Decimal support
num-bigint = "0.4"
num-traits = "0.2"
rust_decimal = "1.36"

# Cranelift JIT
cranelift-codegen = "0.116"
cranelift-frontend = "0.116"
cranelift-module = "0.116"
cranelift-jit = "0.116"
cranelift-native = "0.116"
target-lexicon = "0.12"

# Async IO
tokio = { version = "1", features = ["rt-multi-thread", "fs", "io-util", "sync", "time", "net", "macros", "process"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }

# String encoding
encoding_rs = "0.8"
base64 = "0.22"
percent-encoding = "2.3"

# HTTP Server
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["server", "tokio"] }

# Time, Random, Regex
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
regex = "1"

# UUID, Crypto
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
md-5 = "0.10"
bcrypt = "0.16"

# Database
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = { version = "0.14", features = ["serde"] }
postgres-native-tls = "0.5"
native-tls = "0.2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
futures = "0.3"

# Thread pools
rayon = "1.8"
parking_lot = "0.12"

# Dynamic loading
libloading = "0.8"

# Selenium WebDriver
thirtyfour = "0.32"

# Internal crates
nostos-syntax = { path = "crates/syntax" }
nostos-compiler = { path = "crates/compiler" }
nostos-vm = { path = "crates/vm" }
nostos-types = { path = "crates/types" }
nostos-repl = { path = "crates/repl" }
nostos-cli = { path = "crates/cli" }
nostos-jit = { path = "crates/jit" }
nostos-extension = { path = "crates/extension" }
[profile.release]
debug = true
