[package]
name = "nostos-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Command-line interface for running Nostos programs"

[[bin]]
name = "nostos"
path = "src/main.rs"

[dependencies]
nostos-syntax = { path = "../syntax" }
nostos-compiler = { path = "../compiler" }
nostos-vm = { path = "../vm" }
nostos-jit = { path = "../jit" }
nostos-repl = { path = "../repl" }
reedline = "0.38.0"
nu-ansi-term = "0.50"
cursive = { version = "0.20", default-features = false, features = ["crossterm-backend"] }
crossbeam-channel = "0.5"
crossterm = "0.27"
