[package]
name = "nostos-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Command-line interface for running Nostos programs"
build = "build.rs"

[[bin]]
name = "nostos"
path = "src/main.rs"

[dependencies]
nostos-syntax = { path = "../syntax" }
nostos-compiler = { path = "../compiler" }
nostos-vm = { path = "../vm" }
nostos-jit = { path = "../jit" }
nostos-repl = { path = "../repl" }
nostos-source = { path = "../source" }
nostos-packages = { path = "../packages" }
reedline = "0.38.0"
nu-ansi-term = "0.50"
cursive = { version = "0.20", default-features = false, features = ["crossterm-backend"] }
cursive-tabs = "0.8"
crossbeam-channel = "0.5"
crossterm = "0.27"
parking_lot = "0.12"
imbl = "3"
ctrlc = "3.4"
signal-hook = "0.3"
ureq = "2.9"
dirs = "5"
serde_json = "1"
tokio = { workspace = true }
mimalloc = { version = "0.1", default-features = false }
