[package]
name = "nostos-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
nostos-syntax = { path = "../syntax" }
nostos-types = { path = "../types" }
nostos-vm = { path = "../vm" }
thiserror = "2.0"
num-bigint = { workspace = true }
rust_decimal = { workspace = true }

[dev-dependencies]
imbl = "3"

[features]
# Enable .nos file integration tests (slow - use runall.sh instead)
nos-file-tests = []
