[package]
name = "nostos-lsp"
version = "0.1.0"
edition = "2021"
description = "Language Server Protocol implementation for Nostos"

[[bin]]
name = "nostos-lsp"
path = "src/main.rs"

[dependencies]
# LSP implementation
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }

# Nostos crates
nostos-repl = { path = "../repl" }
nostos-compiler = { path = "../compiler" }

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5"
