[package]
name = "nostos-repl"
version.workspace = true
edition.workspace = true

[dependencies]
nostos-syntax.workspace = true
nostos-compiler.workspace = true
nostos-vm.workspace = true
nostos-types.workspace = true
nostos-jit.workspace = true
nostos-source = { path = "../source" }
thiserror.workspace = true
parking_lot = "0.12"
imbl = "3"

[dev-dependencies]
