[package]
name = "nostos-source"
version = "0.1.0"
edition = "2021"

[dependencies]
nostos-syntax = { path = "../syntax" }

# Hashing
seahash = "4.1"

# File system
walkdir = "2.4"

# Serialization for nostos.toml
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

# Error handling
thiserror = "1.0"

# Regex for renaming
regex = "1.10"

[dev-dependencies]
tempfile = "3.10"
