[package]
name = "nostos-tui"
version.workspace = true
edition.workspace = true

[dependencies]
nostos-repl = { path = "../repl" }
nostos-compiler.workspace = true
nostos-vm.workspace = true
nostos-syntax.workspace = true
cursive = { version = "0.20", default-features = false, features = ["crossterm-backend"] }
crossbeam-channel = "0.5"
once_cell = "1.18"
crossterm = "0.27"
