[package]
name = "nostos-vm"
version = "0.1.0"
edition = "2021"

[dependencies]
nostos-syntax = { path = "../syntax" }
nostos-types = { path = "../types" }
thiserror = "2.0"
parking_lot = "0.12"
crossbeam = "0.8"

[[bench]]
name = "vm_vs_runtime"
harness = false

[dev-dependencies]
nostos-compiler = { path = "../compiler" }
