[package]
name = "nostos-vm"
version = "0.1.0"
edition = "2021"

[dependencies]
nostos-syntax = { path = "../syntax" }
nostos-types = { path = "../types" }
thiserror = "2.0"
parking_lot = "0.12"
crossbeam = "0.8"
num-bigint = { workspace = true }
num-traits = { workspace = true }
rust_decimal = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
encoding_rs = { workspace = true }
base64 = { workspace = true }
percent-encoding = { workspace = true }

[[bench]]
name = "vm_vs_runtime"
harness = false

[dev-dependencies]
nostos-compiler = { path = "../compiler" }
