[package]
name = "nostos-vm"
version = "0.1.0"
edition = "2021"

[dependencies]
nostos-syntax = { path = "../syntax" }
nostos-types = { path = "../types" }
thiserror = "2.0"
parking_lot = "0.12"
imbl = "3"
smallvec = "1.13"
crossbeam = "0.8"
crossbeam-channel = "0.5.15"
crossbeam-deque = "0.7"

num-bigint = { workspace = true }
num-traits = { workspace = true }
rust_decimal = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
encoding_rs = { workspace = true }
base64 = { workspace = true }
percent-encoding = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
md-5 = { workspace = true }
bcrypt = { workspace = true }
tokio-postgres = { workspace = true }
deadpool-postgres = { workspace = true }
postgres-native-tls = { workspace = true }
native-tls = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "vm_vs_runtime"
harness = false

[dev-dependencies]
nostos-compiler = { path = "../compiler" }
